# Robotics-Turtlebot3-lane-detection

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package.xml  plan2.md  setup.py
.claude/rules/: code-style.md  control-logic.md  development-rules.md  tuning-guide.md
.claude/specs/: file-architecture.md  hardware.md  ros-interface.md  tech-stack.md  track-geometry.md
lane_detection/: CLAUDE.md  diagnose_camera.py  lane_detector_node.py  respawn_robot.py
launch/: CLAUDE.md  hardware.launch.py  simulation.launch.py
worlds/: two_lane_circle.world
