<?xml version="1.0"?>
<package format="3">
  <name>lane_detection</name>
  <version>0.0.1</version>
  <description>TurtleBot3 lane detection - Indian LHT</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
